--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -10,9 +10,8 @@
 	                        <div class="home_content_contact">
 	                            <div class="breadcrumbs_contact">
 	                                <ul>
-	                                    <li><a href="index.html">Home</a></li>
-	                                    <li><a href="categories.html">Categories</a></li>
-	                                    <li>Shopping Cart</li>
+	                                    <li><a href="/">Home</a></li>
+	                                    <li>Panier</li>
 	                                </ul>
 	                            </div>
 	                        </div>
@@ -97,7 +96,9 @@
 	                        </ul>
 						</div>
 						<div class="cart_payment">
-						<div class="button cart_button checkout_button"><a href="#">Procéder au paiement</a></div>
+							<div class="button cart_button checkout_button">
+								<%= link_to "Procéder au paiement", resume_path(id: @cart.id) %>
+							</div>
 						</div>
 	                </div>
 	            </div>
