--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -26,13 +26,7 @@
 
 	<div class="cart_info">
 	    <div class="container">
-	        <div class="row">
-	            <div class="col">
-	                <!-- Column Titles -->
-	                <div class="cart_info_columns clearfix">
-	                </div>
-	            </div>
-	        </div>
+	        <div class="row cart_info_columns"></div>
 	                <!-- Cart Item -->
 	                <%= render(@cart.line_items) %>
 	        <div class="row row_cart_buttons">
