--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -3,7 +3,7 @@
     <div class="cart_item">
       <!-- Name -->
 
-        <div class="cart_item_image col-xl-3 col-sm-4">
+        <div class="cart_item_image big_cart col-xl-3 col-sm-4">
           <div><%= attachement_or_picture(line_item.product) %></div>
         </div>
         <div class="cart_details col-sm-8 col-xl-9">
