added ShippingInfo controller + delivery_time + shipping_info_form + cart.css

--- a/app/views/carts/display_form_edit_shipping_address.js.erb
+++ b/app/views/carts/display_form_edit_shipping_address.js.erb
@@ -1,4 +1,4 @@
 var x = document.getElementById("shipping_address_<%=@shipping_info_id%>");
 x.style.display = "none";
-$("#form_shipping_address_<%=@shipping_info_id%>").html('<%= j render "carts/form"%>').fadeIn();
+$("#form_shipping_address").html('<%= j render "carts/form"%>').fadeIn();
 
