--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -38,7 +38,7 @@
 						<div class="col-sm-1"></div>
 	                        <div class="button cart_button col-sm-5">
                                 <span>
-                                    <%= link_to "Vider le panier", @cart, method: :delete, date: {confirm: "Êtes-vous sûr ?"} %>
+                                    <%= link_to "Vider le panier", @cart, method: :delete, data: {confirm: "Êtes-vous sûr ?"} %>
                                 </span>
                             </div>
 
