--- a/app/views/carts/resume.html.erb
+++ b/app/views/carts/resume.html.erb
@@ -45,7 +45,7 @@
 	                        <li class="d-flex flex-row align-items-center justify-content-start">
 	                            <div class="cart_total_title">Livraison</div>
 	                            <div class="cart_total_value ml-auto" id="delivery_form">
-	                                <%= @cart.delivery.name %> - <%= number_to_currency(@cart.delivery.price) %>
+	                                <%= attachement_or_picture_delivery(@cart.delivery) %> <%= @cart.delivery.name %> - <%= number_to_currency(@cart.delivery.price) %>
 	                            </div>
                             </li>
 	                        <li class="d-flex flex-row align-items-center justify-content-start">
@@ -60,37 +60,36 @@
 			</aside>
 			<aside class="aside payment_and_delivery_card col-lg-6">
 				<div class="delivery_addresses">
-					<div class="container">
 						<div class="row">
-							<div class="col-lg-8 contact_col">
-								<div class="get_in_touch">
-									<div class="section_title">Adresse de livraison</div>
-									<div>
-										<%= link_to({:controller => "carts", :action => "add_shipping_adress", :cart_id => @cart.id}, :method => "get", :id => "add_shipping_adress", remote: true) do %>
-											Ajouter une adresse de livraison
-										<% end %>
-									</div>
-									<div id="form_for_shipping_addresses">
-										<%= missing_shipping_info(current_user) %>
-									</div>
-									<div id="shipping_adresses">
-									</div>
-									<div id="different_shipping_adress_form">
-									</div>
+							<div class="col-12">
+								<div class="section_title">Adresse de livraison</div>
+								<div id="form_for_shipping_addresses">
+									<%= missing_shipping_info(current_user) %>
+								</div>
+								<div id="shipping_adresses">
+								</div>
+								<div id="different_shipping_adress_form">
+								</div>
+								<div class="cart_link">
+									<%= link_to({:controller => "shipping_info", :action => "add_shipping_adress", :cart_id => @cart.id}, :method => "get", :id => "add_shipping_adress", remote: true) do %>
+										<i class="fa fa-plus" aria-hidden="true"></i> Ajouter une adresse de livraison
+									<% end %>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
+					<div class="row mt-5">
 						<%= form_tag({:controller => "carts", :action => "different_shipping_adress"}, :method => "get", :id => "check_if_different_shipping_adress", remote: true) do %>
 							<%= check_box_tag("different_shipping_adress", 1, false, {:onclick => "display_form();"}) %>
-							<%= hidden_field_tag("id", @cart.id) %>
+							<%= label_tag "Adresse de facturation différente" %>
+							<%= hidden_field_tag("cart_id", @cart.id) %>
 							<% if @shopping_info != nil %>
 								<%= hidden_field_tag("shopping_info", @shopping_info.id) %>
 							<% end %>
 						<% end %>
 					</div>
+				<div class="mt-3">Livraison prévue après ou pour le <%= delivery_time(@cart.delivery.delivery_time) %></div>
 				</div>		
+				
 			<div class="">
 				<%= render "carts/payment" %>
 			</div>
