--- a/app/views/carts/resume.html.erb
+++ b/app/views/carts/resume.html.erb
@@ -77,27 +77,36 @@
 								</div>
 							</div>
 						</div>
-					<div class="row mt-5">
-						<%= form_tag({:controller => "carts", :action => "different_shipping_adress"}, :method => "get", :id => "check_if_different_shipping_adress", remote: true) do %>
-							<%= check_box_tag("different_shipping_adress", 1, false, {:onclick => "display_form();"}) %>
-							<%= label_tag "Adresse de facturation différente" %>
-							<%= hidden_field_tag("cart_id", @cart.id) %>
-							<% if @shopping_info != nil %>
-								<%= hidden_field_tag("shopping_info", @shopping_info.id) %>
+						<div class="row mt-5">
+							<div class="col-12">
+							<% if @billing_info != nil %>
+								<%= render "billing_infos/billing_infos"%>
+							<% else %>
+								<%= form_tag({:controller => "billing_infos", :action => "different_billing_adress"}, :method => "get", :id => "check_if_different_billing_adress", remote: true) do %>
+									<%= check_box_tag("different_billing_adress", 1, false, {:onclick => "display_form();"}) %>
+									<%= label_tag "Adresse de facturation différente" %>
+									<%= hidden_field_tag("cart_id", @cart.id) %>
+									<% if @shopping_info != nil %>
+										<%= hidden_field_tag("shopping_info", @shopping_info.id) %>
+									<% end %>
+								<% end %>
 							<% end %>
-						<% end %>
+							</div>
+						</div>
+					<div id="different_billing_adress_form">
+
 					</div>
-				<div class="mt-3">Livraison prévue après ou pour le <%= delivery_time(@cart.delivery.delivery_time) %></div>
+				<div class="mt-3"><i class="fa fa-truck" aria-hidden="true"></i>&nbsp;&nbsp;Livraison prévue pour le
+					<%= delivery_time(@cart.delivery.delivery_time) %></div>
 				</div>		
-				
-			<div class="">
-				<%= render "carts/payment" %>
-			</div>
+			 <%= form_tag({controller: "carts", action: "resume_payment", id: @cart.id}, {method: "post", id: "payment-form"}) do %>
+				<div class="">
+					<%= render "carts/payment" %>
+				</div>
                 <div class="cart_payment">
-				    <div class="button cart_button checkout_button">
-                		<%= link_to "Procéder au paiement", resume_path(id: @cart.id) %>
-                	</div>
-                </div>
+				    <%= submit_tag "Payer" %>
+				</div>
+			<% end %>
 			</aside>
 			</div>
         </div>
