--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -8,12 +8,12 @@
         </div>
         <div class="cart_details col-sm-8 col-xl-9">
 
-        <div class="cart_item_name_container col-xl-6 col-sm-9">
+        <div class="cart_item_name_container col-xl-5 col-sm-9">
           <div class="cart_item_name"><a href="/product/<%=line_item.product.id%>"><%= line_item.product.product_name %> -
               <%= line_item.product.phone_brand.brand %> - <%= line_item.product.phone_model.model %></a></div>
         </div>
       <!-- Price -->
-      <div class="cart_item_price col-xl-2 col-sm-6"><%= number_to_currency(line_item.product.price) %></div>
+      <div class="cart_item_price col-xl-3 col-sm-6"><%= product_status(line_item.product) %></div>
       <!-- Quantity -->
       <div class="cart_item_quantity col-xl-2 col-sm-6">
                         <!-- Product Quantity -->
