--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Admin controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.select_time select {
+    width: 100px;
+    height: 41px;
+    border: solid 2px #d0d0d0;
+    overflow: hidden;
+    vertical-align: middle;
+    color: #1b1b1b;
+    font-size: 14px;
+    font-weight: 600;
+}
