--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -53,10 +53,16 @@
 	                    <div class="section_title">Code de réduction</div>
 	                    <div class="section_subtitle">Entrez votre code de réduction</div>
 	                    <div class="coupon_form_container">
-	                        <form action="#" id="coupon_form" class="coupon_form">
+							<%= form_tag({:controller => "carts", :action => "apply_coupon"}, remote: true) do %>
+								<%= text_field_tag("coupon_code") %>
+								<%= hidden_field_tag("id", @cart.id) %>
+								<%= submit_tag "Appliquer" %>
+							<% end %>
+							<span id="contentErrorCoupon" class="help-block"></span>
+	                        <!-- <form action="#" id="coupon_form" class="coupon_form">
 	                            <input type="text" class="coupon_input" required="required">
 	                            <button class="button coupon_button"><span>Apply</span></button>
-	                        </form>
+	                        </form> -->
 	                    </div>
 	                </div>
 	            </div>
@@ -80,7 +86,13 @@
 											<%= f.collection_select :delivery_id, Delivery.all, :id, :name_and_price, {:prompt => "Livraison"}, {:onchange=>"select_delivery();"} %>
 										<% end %>
 									</div>
-	                            </li>
+								</li>
+								<div id="coupon_code_applied">
+									<% if @cart.discount_code != nil %>
+										<%= render "carts/coupon_code_applied" %>
+									<% end %>
+								</div>
+
 	                            <li class="d-flex flex-row align-items-center justify-content-start">
 	                                <div class="cart_total_title">Total</div>
 	                                <div class="cart_total_value ml-auto" id="total_price">
